work in progress: content not generating

--- a/content/projects/spatial-qa-monitoring.mdx
+++ b/content/projects/spatial-qa-monitoring.mdx
@@ -56,7 +56,7 @@ Constructa Inc., a leader in large-scale commercial construction, relied on manu
 
 They needed a way to rapidly compare the 'as-built' reality of their construction sites against the 'as-designed' 3D models (BIM), flagging deviations automatically so project managers could take immediate action.
 
-<!--section-break-->
+--section-break--
 
 The workflow MVP completely transformed Constructa's QA process. Project managers could now get a detailed progress report within hours of a drone flight, instead of waiting days for a manual survey.
 
