--- a/content/projects/urbanharvest-forecast.mdx
+++ b/content/projects/urbanharvest-forecast.mdx
@@ -56,7 +56,7 @@ UrbanHarvest, an innovative D2C grocery service, faced a classic startup dilemma
 
 A misstep could mean wasted marketing spend, logistical headaches, and a significant dent in their runway. They needed a data-driven framework to select their next market with confidence, all within an aggressive one-week timeline.
 
-<!--section-break-->
+--section-break--
 
 The experiment yielded clear, quantifiable results. The top-ranked neighborhood showed significantly lower Cost Per Sign-up and higher intent signals, indicating a much higher likelihood of success.
 
