--- a/content/projects/field-ops-digitization.mdx
+++ b/content/projects/field-ops-digitization.mdx
@@ -55,7 +55,7 @@ Global Manufacturing's facility managers were buried in paper. With over 200 uni
 
 They needed a centralized system that was easy for field operators to use on tablets but powerful enough to provide instant insights to leadership, without a costly and lengthy custom software build.
 
-<!--section-break-->
+--section-break--
 
 The impact was immediate. The company achieved 100% digital tracking for all compliance checks. Reporting, which used to take days of manual collation, was now instant. The 12 hours saved per week on data entry were reallocated to higher-value maintenance tasks.
 
