--- a/content/legal/privacy-policy.mdx
+++ b/content/legal/privacy-policy.mdx
@@ -1,15 +1,17 @@
 ---
 title: "Privacy Policy"
-description: "Learn how AlphaPebble collects, uses, and protects your personal information when you visit our website or use our services."
+description: "Learn how AlphaPebble collects, uses, and protects your personal information in compliance with the Digital Personal Data Protection Act (India, 2023) and the EU General Data Protection Regulation (GDPR)."
 type: "privacy"
 lastUpdated: "September 11, 2025"
 effectiveDate: "September 11, 2025"
-jurisdiction: "Global"
-version: "2.0"
+jurisdiction: "Global (including India under DPDP 2023 and European Union under GDPR 2016/679)"
+version: "2.1"
 showTOC: true
 tableOfContents:
   - title: "Information We Collect"
     anchor: "information-collection"
+  - title: "Legal Basis for Processing"
+    anchor: "legal-basis"
   - title: "How We Use Your Information"
     anchor: "information-use"
   - title: "Information Sharing"
@@ -18,9 +20,13 @@ tableOfContents:
     anchor: "data-security"
   - title: "Your Rights"
     anchor: "your-rights"
+  - title: "International Data Transfers"
+    anchor: "international-transfers"
+  - title: "Children’s Privacy"
+    anchor: "childrens-privacy"
 contactEmail: "privacy@alphapebble.com"
 contactAddress: "123 Business Ave, Suite 100, City, State 12345"
-importantNotice: "This privacy policy is designed to help you understand how we collect and use the personal information you provide to us and to assist you in making informed decisions when using our service."
+importantNotice: "This Privacy Policy is designed to comply with both DPDP (India, 2023) and GDPR (EU, 2016/679). It explains how we collect, use, share, and safeguard your personal data, and outlines your rights and choices."
 ---
 
 <h3 id="information-collection"></h3>
@@ -30,19 +36,33 @@ We collect information you provide directly to us, such as when you create an ac
 
 ### Personal Information
 
-- **Contact Information**: Name, email address, phone number, and mailing address
-- **Professional Information**: Company name, job title, and industry
-- **Communication Data**: Messages you send to us and records of our interactions
+- **Contact Information**: Name, email address, phone number, and mailing address  
+- **Professional Information**: Company name, job title, and industry  
+- **Communication Data**: Messages you send to us and records of our interactions  
 
 ### Automatically Collected Information
 
-- **Device Information**: IP address, browser type, operating system, and device identifiers
-- **Usage Data**: Pages visited, time spent on our site, referral sources, and user interactions
-- **Location Data**: General geographic location based on IP address
+- **Device Information**: IP address, browser type, operating system, and device identifiers  
+- **Usage Data**: Pages visited, time spent on our site, referral sources, and user interactions  
+- **Location Data**: General geographic location based on IP address  
 
 ### Cookies and Tracking Technologies
 
 We use cookies, web beacons, and similar technologies to enhance your experience and gather information about visitors and visits to our website.
+
+---
+
+<h3 id="legal-basis"></h3>
+## Legal Basis for Processing
+
+As required by **GDPR (Art. 6)** and **DPDP (Sec. 4–6)**, we process your personal data only when we have a lawful basis:
+
+- **Consent**: When you subscribe to newsletters, marketing, or optional features  
+- **Contractual Necessity**: To provide our services, process payments, and maintain accounts  
+- **Legal Obligation**: To comply with tax, regulatory, or judicial requirements  
+- **Legitimate Interests**: To improve services, ensure security, and prevent fraud (balanced with your rights)  
+
+You may withdraw consent at any time, without affecting prior lawful processing.
 
 ---
 
@@ -53,27 +73,29 @@ We use the information we collect for various purposes, including:
 
 ### Service Provision
 
-- Provide, maintain, and improve our services
-- Process transactions and send related information
-- Send technical notices and support messages
+- Provide, maintain, and improve our services  
+- Process transactions and send related information  
+- Send technical notices and support messages  
 
 ### Communication
 
-- Respond to your inquiries and provide customer support
-- Send newsletters and marketing communications (with your consent)
-- Notify you about changes to our services
+- Respond to your inquiries and provide customer support  
+- Send newsletters and marketing communications (with your consent)  
+- Notify you about changes to our services  
 
 ### Analytics and Improvement
 
-- Monitor and analyze usage patterns and trends
-- Conduct research and analytics to improve our services
-- Develop new products and features
+- Monitor and analyze usage patterns and trends  
+- Conduct research and analytics to improve our services  
+- Develop new products and features  
 
 ### Legal and Security
 
-- Comply with legal obligations and resolve disputes
-- Protect against fraud, abuse, and security threats
-- Enforce our terms and conditions
+- Comply with legal obligations and resolve disputes  
+- Protect against fraud, abuse, and security threats  
+- Enforce our terms and conditions  
+
+> **Note:** We will not process your data in ways incompatible with the original purpose of collection unless you provide fresh consent (DPDP Sec. 5; GDPR Art. 5).
 
 ---
 
@@ -98,19 +120,19 @@ In the event of a merger, acquisition, or sale of assets, your information may b
 
 We may share your information with your explicit consent for specific purposes not covered in this policy.
 
+> **Compliance Note:** Any third parties processing your data act as **Data Processors (GDPR)** or **Data Fiduciaries/Processors (DPDP)** under binding contracts.
+
 ---
 
 <h3 id="data-security"></h3>
-## Data Security
+## Data Security & Retention
 
-We implement appropriate technical and organizational security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.
+We implement **appropriate technical and organizational security measures** as required by **GDPR Art. 32** and **DPDP Sec. 8**, including:
 
-### Security Measures
-
-- **Encryption**: Data transmission is protected using SSL/TLS encryption
-- **Access Controls**: Strict access controls and authentication procedures
-- **Regular Audits**: Periodic security assessments and vulnerability testing
-- **Data Minimization**: We collect only the information necessary for our purposes
+- **Encryption**: SSL/TLS protection for data transmission  
+- **Access Controls**: Role-based access and authentication  
+- **Audits**: Regular security assessments and vulnerability testing  
+- **Data Minimization**: Collecting only necessary information  
 
 ### Data Retention
 
@@ -121,44 +143,52 @@ We retain personal information only for as long as necessary to fulfill the purp
 <h3 id="your-rights"></h3>
 ## Your Rights
 
-Depending on your location, you may have certain rights regarding your personal information:
+Depending on your location, you may have certain rights regarding your personal information.
 
-### Access and Portability
+### Under GDPR (EU Residents):
 
-- Right to access your personal information
-- Right to receive a copy of your data in a portable format
+- Right to Access, Rectification, Erasure (“Right to be Forgotten”)  
+- Right to Restrict Processing & Object to Processing  
+- Right to Data Portability  
+- Right to Withdraw Consent  
 
-### Correction and Deletion
+### Under DPDP (India Residents):
 
-- Right to correct inaccurate or incomplete information
-- Right to request deletion of your personal information
+- Right to Access Information  
+- Right to Correction and Erasure  
+- Right to Nominate a representative in case of incapacity or death  
+- Right to Grievance Redressal  
 
-### Consent Management
-
-- Right to withdraw consent for processing
-- Right to opt-out of marketing communications
-
-### Data Processing
-
-- Right to object to certain types of processing
-- Right to request restriction of processing
-
-To exercise these rights, please contact us using the information provided below.
+➡️ To exercise these rights, contact us at **privacy@alphapebble.com**.  
+We will respond within **30 days (GDPR Art. 12) / prescribed timelines (DPDP Sec. 12)**.
 
 ---
 
+<h3 id="international-transfers"></h3>
 ## International Data Transfers
 
-Your information may be transferred to and processed in countries other than your own. We ensure appropriate safeguards are in place to protect your information in accordance with this privacy policy.
+Your information may be transferred to and processed in countries other than your own.
+
+- **GDPR**: We rely on adequacy decisions, Standard Contractual Clauses (SCCs), or equivalent safeguards.  
+- **DPDP**: Cross-border transfer is allowed unless specifically restricted by the Government of India.  
+
+---
+
+<h3 id="childrens-privacy"></h3>
+## Children’s Privacy
+
+Our services are not intended for individuals:
+
+- Under the age of **13 (global standard)**  
+- Under the age of **18 in India under DPDP**, unless verifiable parental consent is provided  
+
+We do not knowingly process children’s personal data. If discovered, we will delete it promptly.
 
 ---
 
 ## Changes to This Policy
 
-We may update this privacy policy from time to time. We will notify you of any material changes by posting the updated policy on our website and updating the "Last Updated" date.
+We may update this privacy policy from time to time.  
+We will notify you of any material changes by posting the updated policy on our website and updating the **Last Updated** date.
 
 ---
-
-## Children's Privacy
-
-Our services are not intended for individuals under the age of 13. We do not knowingly collect personal information from children under 13. If you become aware that a child has provided us with personal information, please contact us immediately.
