--- a/content/legal/terms-of-service.mdx
+++ b/content/legal/terms-of-service.mdx
@@ -4,8 +4,8 @@ description: "The terms and conditions governing your use of AlphaPebble's websi
 type: "terms"
 lastUpdated: "September 11, 2025"
 effectiveDate: "September 11, 2025"
-jurisdiction: "United States"
-version: "2.0"
+jurisdiction: "Global (including United States, India under DPDP 2023, and EU under GDPR 2016/679)"
+version: "2.1"
 showTOC: true
 tableOfContents:
   - title: "Acceptance of Terms"
@@ -20,11 +20,19 @@ tableOfContents:
     anchor: "prohibited-activities"
   - title: "Limitation of Liability"
     anchor: "liability"
+  - title: "Indemnification"
+    anchor: "indemnification"
   - title: "Termination"
     anchor: "termination"
+  - title: "Governing Law and Disputes"
+    anchor: "governing-law"
+  - title: "Modifications"
+    anchor: "modifications"
+  - title: "General Provisions"
+    anchor: "general-provisions"
 contactEmail: "legal@alphapebble.com"
 contactAddress: "123 Business Ave, Suite 100, City, State 12345"
-importantNotice: "By accessing and using our services, you agree to be bound by these terms. Please read them carefully before using our platform."
+importantNotice: "By accessing and using our services, you agree to be bound by these Terms of Service. Please read them carefully before using our platform."
 ---
 
 <h3 id="acceptance"></h3>
@@ -36,10 +44,10 @@ By accessing and using the AlphaPebble website and services, you acknowledge tha
 
 These terms apply to all users, including:
 
-- Website visitors
-- Service subscribers
-- Client partners
-- Third-party integrators
+- Website visitors  
+- Service subscribers  
+- Client partners  
+- Third-party integrators  
 
 ### Legal Capacity
 
@@ -54,56 +62,54 @@ Our services are designed to provide digital solutions and consulting expertise.
 
 ### Permitted Use
 
-- Access and use services for legitimate business purposes
-- Comply with all applicable laws and regulations
-- Respect the rights of other users and third parties
-- Use services in accordance with documentation and guidelines
+- Access and use services for legitimate business purposes  
+- Comply with all applicable laws and regulations (including **DPDP** and **GDPR** where applicable)  
+- Respect the rights of other users and third parties  
+- Use services in accordance with documentation and guidelines  
 
 ### Service Availability
 
-- Services are provided "as is" and "as available"
-- We strive for high uptime but do not guarantee uninterrupted access
-- Scheduled maintenance may temporarily affect service availability
-- We reserve the right to modify or discontinue services with notice
+- Services are provided "as is" and "as available"  
+- We strive for high uptime but do not guarantee uninterrupted access  
+- Scheduled maintenance may temporarily affect service availability  
+- We reserve the right to modify or discontinue services with notice  
 
 ### User Responsibilities
 
 You are responsible for:
 
-- Maintaining the security of your account credentials
-- All activities that occur under your account
-- Ensuring your use complies with these terms
-- Providing accurate and current information
+- Maintaining the security of your account credentials  
+- All activities that occur under your account  
+- Ensuring your use complies with these terms  
+- Providing accurate and current information  
 
 ---
 
 <h3 id="user-accounts"></h3>
 ## User Accounts
 
-To access certain features, you may need to create an account with us.
-
 ### Account Creation
 
-- Provide accurate, complete, and current information
-- Maintain and promptly update account information
-- Choose a secure password and keep it confidential
-- Notify us immediately of any unauthorized account use
+- Provide accurate, complete, and current information  
+- Maintain and promptly update account information  
+- Choose a secure password and keep it confidential  
+- Notify us immediately of any unauthorized account use  
 
 ### Account Security
 
-- You are solely responsible for account security
-- We are not liable for losses due to compromised credentials
-- Use strong, unique passwords and enable available security features
-- Log out of shared or public devices
+- You are solely responsible for account security  
+- We are not liable for losses due to compromised credentials  
+- Use strong, unique passwords and enable available security features  
+- Log out of shared or public devices  
 
 ### Account Termination
 
 We may suspend or terminate accounts that:
 
-- Violate these terms or our policies
-- Engage in fraudulent or illegal activities
-- Remain inactive for extended periods
-- Pose security risks to our platform
+- Violate these terms or our policies  
+- Engage in fraudulent or illegal activities  
+- Remain inactive for extended periods  
+- Pose security risks to our platform  
 
 ---
 
@@ -116,34 +122,24 @@ All content and materials on our platform are protected by intellectual property
 
 We own or have licensed rights to:
 
-- Website content, design, and functionality
-- Software, algorithms, and technical innovations
-- Trademarks, logos, and brand elements
-- Documentation and educational materials
+- Website content, design, and functionality  
+- Software, algorithms, and technical innovations  
+- Trademarks, logos, and brand elements  
+- Documentation and educational materials  
 
 ### Your Rights
 
 You retain ownership of:
 
-- Content you create using our services
-- Data you input into our systems
-- Intellectual property you owned prior to using our services
+- Content you create using our services  
+- Data you input into our systems  
+- Intellectual property you owned prior to using our services  
 
 ### License Grants
 
-- We grant you a limited, non-exclusive license to use our services
-- You grant us permission to process your content to provide services
-- Neither party may use the other's intellectual property without permission
-
-### Copyright Compliance
-
-If you believe content infringes your copyright, please provide:
-
-- Description of the copyrighted work
-- Location of the infringing material
-- Your contact information
-- Statement of good faith belief
-- Electronic signature
+- We grant you a limited, non-exclusive license to use our services  
+- You grant us permission to process your content to provide services  
+- Neither party may use the other's intellectual property without permission  
 
 ---
 
@@ -154,33 +150,33 @@ You may not use our services to:
 
 ### Harmful Activities
 
-- Transmit malware, viruses, or malicious code
-- Attempt unauthorized access to systems or accounts
-- Interfere with service operation or security
-- Engage in any form of harassment or abuse
+- Transmit malware, viruses, or malicious code  
+- Attempt unauthorized access to systems or accounts  
+- Interfere with service operation or security  
+- Engage in any form of harassment or abuse  
 
 ### Legal Violations
 
-- Violate applicable laws or regulations
-- Infringe on intellectual property rights
-- Engage in fraudulent activities
-- Distribute illegal or harmful content
+- Violate applicable laws or regulations  
+- Infringe on intellectual property rights  
+- Engage in fraudulent activities  
+- Distribute illegal or harmful content  
 
 ### Platform Abuse
 
-- Create multiple accounts to circumvent restrictions
-- Use automated systems to access services excessively
-- Resell or redistribute services without authorization
-- Reverse engineer or attempt to extract source code
+- Create multiple accounts to circumvent restrictions  
+- Use automated systems to access services excessively  
+- Resell or redistribute services without authorization  
+- Reverse engineer or attempt to extract source code  
 
 ### Consequences
 
 Violation of these prohibitions may result in:
 
-- Immediate account suspension or termination
-- Legal action to protect our interests
-- Reporting to appropriate authorities
-- Liability for damages caused
+- Immediate account suspension or termination  
+- Legal action to protect our interests  
+- Reporting to appropriate authorities  
+- Liability for damages caused  
 
 ---
 
@@ -191,38 +187,39 @@ To the maximum extent permitted by law:
 
 ### Disclaimer of Warranties
 
-- Services are provided "as is" without warranties
-- We disclaim all implied warranties of merchantability and fitness
-- No guarantee of error-free or uninterrupted service
-- User assumes all risks associated with service use
+- Services are provided "as is" without warranties  
+- We disclaim all implied warranties of merchantability and fitness  
+- No guarantee of error-free or uninterrupted service  
+- User assumes all risks associated with service use  
 
 ### Limitation of Damages
 
 Our liability is limited to:
 
-- The amount you paid for services in the preceding 12 months
-- Direct damages only - no consequential or punitive damages
-- Reasonable attorney fees in successful legal actions against us
+- The amount you paid for services in the preceding 12 months  
+- Direct damages only – no consequential or punitive damages  
+- Reasonable attorney fees in successful legal actions against us  
 
 ### Exceptions
 
 Limitations do not apply to:
 
-- Gross negligence or willful misconduct
-- Personal injury or death caused by our actions
-- Violations of consumer protection laws
-- Other rights that cannot be limited by law
+- Gross negligence or willful misconduct  
+- Personal injury or death caused by our actions  
+- Violations of consumer protection laws (including **DPDP consumer safeguards** and **GDPR user rights**)  
+- Other rights that cannot be limited by law  
 
 ---
 
+<h3 id="indemnification"></h3>
 ## Indemnification
 
 You agree to indemnify and hold us harmless from claims arising from:
 
-- Your use of our services
-- Violation of these terms
-- Infringement of third-party rights
-- Your content or data
+- Your use of our services  
+- Violation of these terms  
+- Infringement of third-party rights  
+- Your content or data  
 
 ---
 
@@ -233,40 +230,41 @@ Either party may terminate the relationship under certain circumstances.
 
 ### Termination by You
 
-- Cancel your account at any time through account settings
-- Contact support for assistance with account closure
-- Download your data before termination if desired
+- Cancel your account at any time through account settings  
+- Contact support for assistance with account closure  
+- Download your data before termination if desired  
 
 ### Termination by Us
 
 We may terminate for:
 
-- Material breach of these terms
-- Non-payment of fees
-- Illegal or harmful activities
-- Extended period of inactivity
+- Material breach of these terms  
+- Non-payment of fees  
+- Illegal or harmful activities  
+- Extended period of inactivity  
 
 ### Effect of Termination
 
 Upon termination:
 
-- Your access to services will cease
-- We may delete your account data after a reasonable period
-- Outstanding obligations survive termination
-- Certain provisions continue to apply
+- Your access to services will cease  
+- We may delete your account data after a reasonable period  
+- Outstanding obligations survive termination  
+- Certain provisions continue to apply  
 
 ---
 
+<h3 id="governing-law"></h3>
 ## Governing Law and Disputes
 
-These terms are governed by the laws of [Your State/Country].
+These terms are governed by the laws of the **United States**, with additional compliance to **DPDP (India)** and **GDPR (EU)** where applicable.
 
 ### Dispute Resolution
 
-- Informal resolution: Contact us to resolve disputes amicably
-- Mediation: If informal resolution fails, we prefer mediation
-- Arbitration: Binding arbitration for claims under $10,000
-- Jurisdiction: Courts in [Your Location] for larger claims
+- Informal resolution: Contact us to resolve disputes amicably  
+- Mediation: If informal resolution fails, we prefer mediation  
+- Arbitration: Binding arbitration for claims under $10,000  
+- Jurisdiction: Courts in [Your Location] for larger claims  
 
 ### Class Action Waiver
 
@@ -274,27 +272,29 @@ You agree to resolve disputes individually and waive rights to class action part
 
 ---
 
+<h3 id="modifications"></h3>
 ## Modifications
 
 We may modify these terms at any time.
 
 ### Notice of Changes
 
-- Material changes will be posted on our website
-- Email notification for significant modifications
-- Continued use constitutes acceptance of new terms
-- 30-day notice period for material changes
+- Material changes will be posted on our website  
+- Email notification for significant modifications  
+- Continued use constitutes acceptance of new terms  
+- 30-day notice period for material changes  
 
 ### Your Options
 
 If you disagree with modifications:
 
-- Discontinue use of services
-- Contact us to discuss concerns
-- Download your data before terms take effect
+- Discontinue use of services  
+- Contact us to discuss concerns  
+- Download your data before terms take effect  
 
 ---
 
+<h3 id="general-provisions"></h3>
 ## General Provisions
 
 ### Severability
@@ -308,3 +308,5 @@ We may assign these terms; you may not without our consent.
 ### Entire Agreement
 
 These terms constitute the complete agreement between us.
+
+---
