--- a/content/research/drone-thermal-analysis-energy-utility.mdx
+++ b/content/research/drone-thermal-analysis-energy-utility.mdx
@@ -1,7 +1,21 @@
+---
 title: "Drone Thermal Analysis for Energy Utilities"
 subtitle: "AI-powered drone thermal analysis improves defect detection and ESG compliance, saving $100K+."
 tags: ["AI", "Drone", "Energy", "ESG"]
-heroImage: "https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=1400&q=80"
+heroImage: "https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1400&q=80"
+publishedDate: "Oct 24, 2025"
+readTime: "2 min read"
+author:
+  name: "AlphaPebble"
+  title: "AI Solutions"
+  avatar: "https://avatars.githubusercontent.com/u/12345678?v=4"
 ---
 
-Manual hotspot detection missed critical defects and ESG compliance risks across energy infrastructure. 92% mAP accuracy processing 300GB datasets in less than 1 hour. $100K+ savings with 20% faster ESG resolutions.
+**Problem:**
+Manual hotspot detection across energy infrastructure missed critical defects and ESG compliance risks. Traditional methods were slow, error-prone, and unable to process large volumes of thermal imagery, leading to delayed repairs and regulatory challenges.
+
+**Approach:**
+We deployed an AI-powered drone thermal analysis system capable of processing 300GB+ datasets in under an hour. The solution used advanced computer vision models to automatically detect hotspots, defects, and compliance issues, providing actionable insights to field teams and ESG managers.
+
+**Impact:**
+Achieved 92% mAP accuracy in defect detection, enabling 20% faster ESG resolutions and saving over $100K in operational costs. The client improved infrastructure reliability, reduced manual labor, and met ESG targets more efficiently.
