--- a/content/research/knowledge-graph-manufacturing-manuals.mdx
+++ b/content/research/knowledge-graph-manufacturing-manuals.mdx
@@ -1,9 +1,14 @@
-
 ---
 title: Unlock the Next Level of Manufacturing Value With a Knowledge Graph
-subtitle: "How a graph-based architecture enabled personalized access to complex manufacturing documentation and improved operational outcomes."
+subtitle: "How graph-based architectures enable personalized access to complex manufacturing documentation and improve operational outcomes."
 tags: ["Manufacturing", "Knowledge Graph", "Documentation", "Personalization"]
 heroImage: "https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1400&q=80"
+publishedDate: "Oct 24, 2025"
+readTime: "2 min read"
+author:
+  name: "AlphaPebble"
+  title: "AI Solutions"
+  avatar: "https://avatars.githubusercontent.com/u/12345678?v=4"
 ---
 
 **Problem Statement:** Manufacturing organizations struggle to manage and access complex manuals, technical documentation, and process instructions spread across multiple systems and formats. This fragmentation leads to costly errors, slow onboarding, and operational inefficiencies.
