--- a/content/research/predictive-analytics-insurance.mdx
+++ b/content/research/predictive-analytics-insurance.mdx
@@ -1,7 +1,14 @@
+---
 title: "Predictive Analytics - Insurance Platform"
 subtitle: "ML-powered risk models improved prediction accuracy by 30% and generated $500K in annual savings for an insurance platform."
 tags: ["Insurance", "Predictive Analytics", "ML", "Risk Assessment"]
-heroImage: "https://images.unsplash.com/photo-1508385082359-f48b1c1b5c74?auto=format&fit=crop&w=1400&q=80"
+heroImage: "https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1400&q=80"
+publishedDate: "Oct 24, 2025"
+readTime: "2 min read"
+author:
+  name: "AlphaPebble"
+  title: "AI Solutions"
+  avatar: "https://avatars.githubusercontent.com/u/12345678?v=4"
 ---
 
 **Problem Statement:** Legacy risk assessment models relied on static data and manual processes, failing to capture dynamic risk patterns and leading to suboptimal pricing and inaccurate claims prediction, costing the business significant revenue over time.
