--- a/content/research/real-time-revenue-protection-ecommerce.mdx
+++ b/content/research/real-time-revenue-protection-ecommerce.mdx
@@ -1,7 +1,14 @@
+---
 title: "Real-Time Revenue Protection - eCommerce Platform"
 subtitle: "How LSTM monitoring cut issue detection time by 95% and saved $2M in ad costs for a Shopify-based eCommerce platform."
 tags: ["eCommerce", "Revenue Protection", "Shopify", "LSTM", "ROI"]
-heroImage: "https://images.unsplash.com/photo-1515165562835-cf7747c7b1a7?auto=format&fit=crop&w=1400&q=80"
+heroImage: "https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1400&q=80"
+publishedDate: "Oct 24, 2025"
+readTime: "2 min read"
+author:
+  name: "AlphaPebble"
+  title: "AI Solutions"
+  avatar: "https://avatars.githubusercontent.com/u/12345678?v=4"
 ---
 
 **Problem Statement:** Shopify configurations and tracking errors disrupted data flow, leading to significant traffic drops, broken customer journeys, missing pixels, and revenue leakage. Manual detection proved insufficient to prevent substantial performance impact, delaying actionable insights for weeks.
