--- a/content/research/demand-forecast-in-a-week.mdx
+++ b/content/research/demand-forecast-in-a-week.mdx
@@ -1,7 +1,18 @@
+---
 title: "Standing Up a Demand Forecast in a Week"
 subtitle: "A practical guide from our UrbanHarvest experiment on how to decide with confidence when you have zero historical data."
-tags: ["Demand Forecast", "Experiment", "Startup", "UrbanHarvest"]
+tags:
+  - Demand Forecast
+  - Experiment
+  - Startup
+  - UrbanHarvest
 heroImage: "https://images.unsplash.com/photo-1542744095-291d1f67b221?auto=format&fit=crop&w=2940&q=80"
+publishedDate: "Sep 05, 2025"
+readTime: "5 min read"
+author:
+  name: "AlphaPebble"
+  title: "Data Science"
+  avatar: "https://avatars.githubusercontent.com/u/12345678?v=4"
 ---
 
 One of the biggest hurdles for any new venture is the unknown. For 'UrbanHarvest,' a D2C grocery startup, the question was existential: which neighborhood should they expand into next? With five potential options but zero historical sales data, making the wrong choice could mean wasting tens of thousands of dollars on a failed launch. This is where rapid, intelligent experimentation comes in.
