Rename blog to research across app and content
Migrates all blog-related pages, components, styles, and content to use 'research' instead of 'blog'. Updates file names, imports, CSS classes, and references throughout the app, removes old blog content, and adjusts RSS generation and templates to reflect the new research naming convention.

--- a/templates/blog-template.mdx
+++ b/templates/blog-template.mdx
@@ -1,6 +1,6 @@
 ---
-# REQUIRED: The main title of the blog post. Used for the <h1> tag and SEO title.
-title: "Title of Your Awesome Blog Post"
+# REQUIRED: The main title of the research post. Used for the <h1> tag and SEO title.
+title: "Title of Your Awesome Research Post"
 
 # REQUIRED: A short, engaging subtitle used for social cards and under the main title.
 subtitle: "A concise, compelling summary of what the reader will learn."
@@ -8,14 +8,14 @@ subtitle: "A concise, compelling summary of what the reader will learn."
 # REQUIRED: The publication date. Use YYYY-MM-DD for consistency and easy sorting.
 publishedDate: "2025-09-12"
 
-# REQUIRED: A URL-friendly version of the title, used in the blog post's link.
-slug: "your-awesome-blog-post"
+# REQUIRED: A URL-friendly version of the title, used in the research post's link.
+slug: "your-awesome-research-post"
 
 # REQUIRED: URL for the main hero image displayed at the top of the post.
-heroImage: "/images/blog/your-hero-image.png"
+heroImage: "/images/research/your-hero-image.png"
 
 # OPTIONAL: A smaller, low-resolution placeholder for a blur-up effect while the main image loads.
-heroImagePlaceholder: "/images/blog/placeholders/your-hero-image.png"
+heroImagePlaceholder: "/images/research/placeholders/your-hero-image.png"
 
 # OPTIONAL BUT RECOMMENDED: A brief description (1-2 sentences) for SEO and social media previews.
 description: "This is a short summary of the article's content, optimized for search engines like Google."
@@ -36,7 +36,7 @@ tags:
 readTime: "5 min read"
 ---
 
-Start your blog post with a strong introductory paragraph. This section should grab the reader's attention and clearly state what the article is about and why it's important. Keep it concise and engaging.
+Start your research post with a strong introductory paragraph. This section should grab the reader's attention and clearly state what the article is about and why it's important. Keep it concise and engaging.
 
 ## This is a Main Section Heading (H2)
 
