Refactor legal page layout and improve UI components
Legal page now uses a sidebar table of contents and improved grid layout. Updated various UI components for accessibility and consistency, including modal, footer, loading, mobile nav, and subscribe form. Privacy policy markdown formatting improved. Data fetching for legal documents now returns headings for TOC rendering.

--- a/content/legal/privacy-policy.mdx
+++ b/content/legal/privacy-policy.mdx
@@ -36,15 +36,15 @@ We collect information you provide directly to us, such as when you create an ac
 
 ### Personal Information
 
-- **Contact Information**: Name, email address, phone number, and mailing address  
-- **Professional Information**: Company name, job title, and industry  
-- **Communication Data**: Messages you send to us and records of our interactions  
+- **Contact Information**: Name, email address, phone number, and mailing address
+- **Professional Information**: Company name, job title, and industry
+- **Communication Data**: Messages you send to us and records of our interactions
 
 ### Automatically Collected Information
 
-- **Device Information**: IP address, browser type, operating system, and device identifiers  
-- **Usage Data**: Pages visited, time spent on our site, referral sources, and user interactions  
-- **Location Data**: General geographic location based on IP address  
+- **Device Information**: IP address, browser type, operating system, and device identifiers
+- **Usage Data**: Pages visited, time spent on our site, referral sources, and user interactions
+- **Location Data**: General geographic location based on IP address
 
 ### Cookies and Tracking Technologies
 
@@ -57,10 +57,10 @@ We use cookies, web beacons, and similar technologies to enhance your experience
 
 As required by **GDPR (Art. 6)** and **DPDP (Sec. 4–6)**, we process your personal data only when we have a lawful basis:
 
-- **Consent**: When you subscribe to newsletters, marketing, or optional features  
-- **Contractual Necessity**: To provide our services, process payments, and maintain accounts  
-- **Legal Obligation**: To comply with tax, regulatory, or judicial requirements  
-- **Legitimate Interests**: To improve services, ensure security, and prevent fraud (balanced with your rights)  
+- **Consent**: When you subscribe to newsletters, marketing, or optional features
+- **Contractual Necessity**: To provide our services, process payments, and maintain accounts
+- **Legal Obligation**: To comply with tax, regulatory, or judicial requirements
+- **Legitimate Interests**: To improve services, ensure security, and prevent fraud (balanced with your rights)
 
 You may withdraw consent at any time, without affecting prior lawful processing.
 
@@ -73,27 +73,27 @@ We use the information we collect for various purposes, including:
 
 ### Service Provision
 
-- Provide, maintain, and improve our services  
-- Process transactions and send related information  
-- Send technical notices and support messages  
+- Provide, maintain, and improve our services
+- Process transactions and send related information
+- Send technical notices and support messages
 
 ### Communication
 
-- Respond to your inquiries and provide customer support  
-- Send newsletters and marketing communications (with your consent)  
-- Notify you about changes to our services  
+- Respond to your inquiries and provide customer support
+- Send newsletters and marketing communications (with your consent)
+- Notify you about changes to our services
 
 ### Analytics and Improvement
 
-- Monitor and analyze usage patterns and trends  
-- Conduct research and analytics to improve our services  
-- Develop new products and features  
+- Monitor and analyze usage patterns and trends
+- Conduct research and analytics to improve our services
+- Develop new products and features
 
 ### Legal and Security
 
-- Comply with legal obligations and resolve disputes  
-- Protect against fraud, abuse, and security threats  
-- Enforce our terms and conditions  
+- Comply with legal obligations and resolve disputes
+- Protect against fraud, abuse, and security threats
+- Enforce our terms and conditions
 
 > **Note:** We will not process your data in ways incompatible with the original purpose of collection unless you provide fresh consent (DPDP Sec. 5; GDPR Art. 5).
 
@@ -129,10 +129,10 @@ We may share your information with your explicit consent for specific purposes n
 
 We implement **appropriate technical and organizational security measures** as required by **GDPR Art. 32** and **DPDP Sec. 8**, including:
 
-- **Encryption**: SSL/TLS protection for data transmission  
-- **Access Controls**: Role-based access and authentication  
-- **Audits**: Regular security assessments and vulnerability testing  
-- **Data Minimization**: Collecting only necessary information  
+- **Encryption**: SSL/TLS protection for data transmission
+- **Access Controls**: Role-based access and authentication
+- **Audits**: Regular security assessments and vulnerability testing
+- **Data Minimization**: Collecting only necessary information
 
 ### Data Retention
 
@@ -147,19 +147,19 @@ Depending on your location, you may have certain rights regarding your personal 
 
 ### Under GDPR (EU Residents):
 
-- Right to Access, Rectification, Erasure (“Right to be Forgotten”)  
-- Right to Restrict Processing & Object to Processing  
-- Right to Data Portability  
-- Right to Withdraw Consent  
+- Right to Access, Rectification, Erasure (“Right to be Forgotten”)
+- Right to Restrict Processing & Object to Processing
+- Right to Data Portability
+- Right to Withdraw Consent
 
 ### Under DPDP (India Residents):
 
-- Right to Access Information  
-- Right to Correction and Erasure  
-- Right to Nominate a representative in case of incapacity or death  
-- Right to Grievance Redressal  
+- Right to Access Information
+- Right to Correction and Erasure
+- Right to Nominate a representative in case of incapacity or death
+- Right to Grievance Redressal
 
-➡️ To exercise these rights, contact us at **privacy@alphapebble.com**.  
+➡️ To exercise these rights, contact us at **privacy@alphapebble.com**.
 We will respond within **30 days (GDPR Art. 12) / prescribed timelines (DPDP Sec. 12)**.
 
 ---
@@ -169,8 +169,8 @@ We will respond within **30 days (GDPR Art. 12) / prescribed timelines (DPDP Sec
 
 Your information may be transferred to and processed in countries other than your own.
 
-- **GDPR**: We rely on adequacy decisions, Standard Contractual Clauses (SCCs), or equivalent safeguards.  
-- **DPDP**: Cross-border transfer is allowed unless specifically restricted by the Government of India.  
+- **GDPR**: We rely on adequacy decisions, Standard Contractual Clauses (SCCs), or equivalent safeguards.
+- **DPDP**: Cross-border transfer is allowed unless specifically restricted by the Government of India.
 
 ---
 
@@ -179,16 +179,16 @@ Your information may be transferred to and processed in countries other than you
 
 Our services are not intended for individuals:
 
-- Under the age of **13 (global standard)**  
-- Under the age of **18 in India under DPDP**, unless verifiable parental consent is provided  
+- Under the age of **13 (global standard)**
+- Under the age of **18 in India under DPDP**, unless verifiable parental consent is provided
 
 We do not knowingly process children’s personal data. If discovered, we will delete it promptly.
 
 ---
 
-## Changes to This Policy
+### Changes to This Policy
 
-We may update this privacy policy from time to time.  
+We may update this privacy policy from time to time.
 We will notify you of any material changes by posting the updated policy on our website and updating the **Last Updated** date.
 
 ---
